Added support for mutation testing using PITest.